--- a/test.html
+++ b/test.html
@@ -93,19 +93,38 @@
     //    console.log(arr.length);
 
 
-    function A() {
-        var a = 2;
-//        if (a === 1) {
-//            return a;
-//        }
-//        else{
-//            return 1321;
-//        }
+    //    异步
+    //    function A() {
+    //        var a = 2;
+    //        if (a === 1) {
+    //            return a;
+    //        }
+    //        else{
+    //            return 1321;
+    //        }
 
-        return '32321';
-    }
+    //        return '32321';
+    //    }
+    //
+    //    let v = A();
+    //    console.log(v);
 
-    let v = A();
-    console.log(v);
+
+    //    var arr = [1, 2, 3];
+    //    console.log(arr[0]);
+    //    console.log(arr['1']);
+    //
+
+    //    if (0) {
+    //        console.log('xxx');
+    //    }
+    //    if ('0') {
+    //        console.log('qqq');
+    //    }
+
+
+    let str = '1g.';
+    console.log(str);
+    console.log(str.replace(/[^\d]/g, ''))
 </script>
 </html>
