--- a/sqadsa.html
+++ b/sqadsa.html
@@ -17,15 +17,30 @@
 
 </body>
 <script>
-    let a = [1, 2, 3];
-    console.log(a);
+    //    let a = [1, 2, 3];
+    //    console.log(a);
+    //
+    //    for (var i in a) {
+    //        console.log(a[i]);
+    //    }
+    //
+    //    a.map(function (item) {
+    //        console.log(item);
+    //    });
 
-    for (var i in a) {
-        console.log(a[i]);
+    //    var obj1 = {
+    //        a: 1
+    //    };
+    //    var obj2 = {
+    //        a: 1
+    //    };
+    //    console.log(obj1 === obj2);
+
+
+    let arr = [1, 2, 3];
+    let str = '0';
+    if (str) {
+        console.log(arr[str]);
     }
-
-    a.map(function (item) {
-        console.log(item);
-    });
 </script>
 </html>
