--- a/test/radio样式单击.html
+++ b/test/radio样式单击.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 
-<input type="radio" name="name" id="r1" value="0">
+<input type="radio" name="name" id="radio" value="0">
 
 </body>
 <script>
-    var ipt = document.getElementById('r1');
+    var radio = document.getElementById('radio');
 
-    ipt.addEventListener('click', function () {
+    radio.addEventListener('click', function () {
         if (this.value == 0) {
-            this.setAttribute('checked','checked');
+            this.setAttribute('checked', 'checked');
             this.value = 1;
         }
-        else if(this.value == 1){
+        else if (this.value == 1) {
             this.removeAttribute('checked');
             this.value = 0;
         }
