--- a/我的坑/HTML/正则匹配.html
+++ b/我的坑/HTML/正则匹配.html
@@ -5,15 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-<h1 id="h1"></h1>
-<h1 id="h2"></h1>
+<h3 id="h1"></h3>
+<h3 id="h2"></h3>
 </body>
 <script>
-    var s1 = 'adsadsa321321321dsadsa321321321dsads4234324323dsa';
+    let s1 = 'adsadsa321321321dsadsa321321321dsads4234324323dsa';
     document.getElementById('h1').innerHTML = s1;
-
-    var s2 = s1.replace(/\d+/g,'<span style="color:red">$&</span>');
-
+    
+    let s2 = s1.replace(/\d+/g, '<span style="color:red">$&</span>');
     document.getElementById('h2').innerHTML = s2;
 </script>
 </html>
