--- a/我的坑/HTML/margin和fixed覆盖区域.html
+++ b/我的坑/HTML/margin和fixed覆盖区域.html
@@ -16,7 +16,7 @@
 
 <script>
     localStorage.a = 3;
-    var b = localStorage.getItem("a");
+    var b = localStorage.a;
     alert(b);
 </script>
 </html>
