--- a/填坑/CSS/图片自适应.html
+++ b/填坑/CSS/图片自适应.html
@@ -6,7 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="/zd/css/public.css">
     <style>
-        html,body{
+        html, body {
             width: 100%;
             height: 100%;
         }
@@ -16,7 +16,7 @@
             height: 100%;
             margin: -1px 0 0 -1px;
             padding: 1px;
-            background-image: url("/zd/images/5.jpg");
+            background-image: url('../image/0.jpg');
             background-repeat: no-repeat;
             background-position: center top;
             background-size: cover;
