--- a/填坑/css/inline-block默认样式.html
+++ b/填坑/css/inline-block默认样式.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+
         .a{
             width: 100px;
             height: 100px;
             background-color: red;
             display: inline-block;
             margin-right: -8px;
-            margin-bottom: -3px;
+            margin-bottom: -4px;
             /*float: left;*/
         }
     </style>
