--- a/demo-Vue/1.介绍.html
+++ b/demo-Vue/1.介绍.html
@@ -9,11 +9,11 @@
 
 <div id="app">
     <p>{{ message }}</p>
-    <p v-bind:text="message"></p>
+    <p :text="message"></p>
 </div>
 
 <div id="app-2">
-  <span v-bind:title="message">
+  <span :title="message">
     Hover your mouse over me for a few seconds to see my dynamically bound title!
   </span>
 </div>
@@ -32,7 +32,7 @@
 
 <div id="app-5">
     <p>{{ message }}</p>
-    <button v-on:click="reverseMessage">Reverse Message</button>
+    <button @click="reverseMessage">Reverse Message</button>
 </div>
 
 <div id="app-6">
@@ -42,7 +42,7 @@
 
 <div id="app-7">
     <ol>
-        <todo-item v-for="todo in todos" v-bind:todo="todo"></todo-item>
+        <todo-item v-for="todo in todos" :todo="todo"></todo-item>
     </ol>
 </div>
 
