--- a/demo-Vue/1.介绍.html
+++ b/demo-Vue/1.介绍.html
@@ -7,38 +7,38 @@
 </head>
 <body>
 
-<div id="app">
-    <p>{{ message }}</p>
-    <p :text="message"></p>
-</div>
+<!--<div id="app">-->
+    <!--<p>{{ message }}</p>-->
+    <!--<p :text="message"></p>-->
+<!--</div>-->
 
-<div id="app-2">
-  <span :title="message">
-    Hover your mouse over me for a few seconds to see my dynamically bound title!
-  </span>
-</div>
+<!--<div id="app-2">-->
+  <!--<span :title="message">-->
+    <!--Hover your mouse over me for a few seconds to see my dynamically bound title!-->
+  <!--</span>-->
+<!--</div>-->
 
-<div id="app-3">
-    <p v-if="seen">Now you see me</p>
-</div>
+<!--<div id="app-3">-->
+    <!--<p v-if="seen">Now you see me</p>-->
+<!--</div>-->
 
-<div id="app-4">
-    <ol>
-        <li v-for="todo in todos">
-            {{ todo.text }}
-        </li>
-    </ol>
-</div>
+<!--<div id="app-4">-->
+    <!--<ol>-->
+        <!--<li v-for="todo in todos">-->
+            <!--{{ todo.text }}-->
+        <!--</li>-->
+    <!--</ol>-->
+<!--</div>-->
 
-<div id="app-5">
-    <p>{{ message }}</p>
-    <button @click="reverseMessage">Reverse Message</button>
-</div>
+<!--<div id="app-5">-->
+    <!--<p>{{ message }}</p>-->
+    <!--<button @click="reverseMessage">Reverse Message</button>-->
+<!--</div>-->
 
-<div id="app-6">
-    <p>{{ message }}</p>
-    <input v-model="message">
-</div>
+<!--<div id="app-6">-->
+    <!--<p>{{ message }}</p>-->
+    <!--<input v-model="message">-->
+<!--</div>-->
 
 <div id="app-7">
     <ol>
@@ -51,7 +51,7 @@
     var app = new Vue({
         el: '#app',
         data: {
-            message: 'Hello Vue!'
+            message: 'Hello Vuexxxxx!'
         }
     });
 
