--- a/填坑/CSS/fixed.html
+++ b/填坑/CSS/fixed.html
@@ -4,24 +4,43 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        body{
-            height: 10000px;
+        * {
+            margin: 0;
+            padding: 0;
         }
 
+        body {
+            height: 1000px;
+            position: relative;
+        }
 
-        #div1{
+        #div1 {
+            height: 100px;
+        }
+
+        #div2{
+            width: 100%;
+            height: 100px;
             background-color: #4a545e;
             position: fixed;
             left: 0;
-            right: 0;
             top: 0;
             bottom: 0;
+        }
+
+        #div3 {
+            width: 400px;
+            height: 400px;
+            background-color: #00cc33;
         }
     </style>
 </head>
 <body>
 
-<div id="div1"></div>
+<div id="div1">
+    <div id="div2"></div>
+</div>
+<div id="div3"></div>
 
 </body>
 </html>
