--- a/demo-深入理解JavaScript/2.面向对象入门/3.构造函数-1.html
+++ b/demo-深入理解JavaScript/2.面向对象入门/3.构造函数-1.html
@@ -10,29 +10,31 @@
 <script>
     var obj = new Object();
 
-    obj.name = 'zdNexus';
-    obj.qq = '181811669';
+    obj.name = 'A';
+    obj.QQ = '181811669';
     obj.showName = function () {
         console.log('我的名字叫' + this.name);
     };
     obj.showQQ = function () {
-        console.log('我的QQ号是' + this.qq);
+        console.log('我的手机号是' + this.QQ);
     };
-    obj.showName();//我的名字叫zdNexus
-    obj.showQQ();//我的QQ号是181811669
+    obj.showName();
+    obj.showQQ();
 
 
-    var obj2 = new Object();
-
-    obj2.name = 'zdQQQ';
-    obj2.qq = '13398769160';
-    obj2.showName = function () {
-        console.log('我的名字叫' + this.name);
-    };
-    obj2.showQQ = function () {
-        console.log('我的QQ号是' + this.qq);
-    };
-    obj2.showName();//我的名字叫zdQQQ
-    obj2.showQQ();//我的QQ号是13398769160
+//    var obj2 = new Object();
+//    obj2.name = 'B';
+//    obj2.QQ = '13398769160';
+//    obj2.showName = function () {
+//        console.log('我的名字叫' + this.name);
+//    };
+//    obj2.showQQ = function () {
+//        console.log('我的手机号是' + this.QQ);
+//    };
+//    obj2.showName();
+//    obj2.showQQ();
+</script>
+<script>
+    alert(1);
 </script>
 </html>
