--- a/demo-深入理解JavaScript/2.面向对象入门/6.构造方法-1.html
+++ b/demo-深入理解JavaScript/2.面向对象入门/6.构造方法-1.html
@@ -11,7 +11,6 @@
     var arr1 = new Array(1, 2, 3, 4, 5);
     var arr2 = new Array(6, 7, 8, 9, 0);
 
-//    sum是arr1单独的方法,往对象上加方法
     arr1.sum = function () {
         var result = 0;
 
@@ -22,15 +21,7 @@
         return result;
     };
 
-    console.log(arr1.sum);
-//    function () {
-//        var result = 0;
-//        for (var i = 0; i < this.length; i++) {
-//            result += i;
-//        }
-//        return result;
-//    };
-    console.log(arr1.sum());//15
-    console.log(arr2.sum());//ERROR:arr2.sum is not a function
+    console.log(arr1.sum());
+    console.log(arr2.sum());
 </script>
 </html>
