--- a/demo-深入理解JavaScript/2.面向对象入门/7.构造方法-2.html
+++ b/demo-深入理解JavaScript/2.面向对象入门/7.构造方法-2.html
@@ -23,7 +23,11 @@
         return result;
     };
 
-    console.log(arr1.sum());//15
-    console.log(arr2.sum());//30
+    var arr3 = [1,2,3];
+
+//    console.log(arr1.sum());//15
+//    console.log(arr2.sum());//30
+
+    console.log(arr1.sum == arr2.sum);
 </script>
 </html>
