--- a/demo-深入理解JavaScript/2.面向对象入门/10.点击事件的面向对象-2.html
+++ b/demo-深入理解JavaScript/2.面向对象入门/10.点击事件的面向对象-2.html
@@ -11,6 +11,10 @@
             display: none;
         }
 
+        .bgGrey:first-of-type {
+            display: block;
+        }
+
         .active {
             background-color: #1e88e5;
         }
@@ -22,7 +26,7 @@
     <input type="button" value="aaa" class="active">
     <input type="button" value="bbb">
     <input type="button" value="ccc">
-    <div class="bgGrey" style="display: block;">apple</div>
+    <div class="bgGrey">apple</div>
     <div class="bgGrey">banana</div>
     <div class="bgGrey">cup</div>
 </div>
@@ -30,7 +34,7 @@
 </body>
 <script>
     //    面向对象改写：
-//    使用了全局变量，非常危险
+    //    使用了全局变量，非常危险
     var oDiv = document.getElementById('div1');
     var aDiv = oDiv.getElementsByTagName('div');
     var aBtn = oDiv.getElementsByTagName('input');
