--- a/demo-深入理解JavaScript/2.面向对象入门/4.构造函数-2.html
+++ b/demo-深入理解JavaScript/2.面向对象入门/4.构造函数-2.html
@@ -11,37 +11,46 @@
     //    重复->构造函数
     //    工厂模式:
     function createPerson(name, qq) {
-        //        原料
+        //        y
         var obj = new Object();
-
-        //        加工
+        //        j
         obj.name = name;
         obj.qq = qq;
         obj.showName = function () {
-            console.log('我的名字叫' + this.name);
+            console.log('我的名字' + this.name);
+
+            return 1;
         };
         obj.showQQ = function () {
-            console.log('我的QQ号是' + this.qq);
+            console.log('我的QQ是' + this.qq);
         };
-
-        //        出厂
-        return obj;//return非常重要
+        //        c
+        return obj;
     }
 
-    var obj = createPerson('zdNexus', '181811669');
-    obj.showName();//我的名字叫zdNexus
-    obj.showQQ();//我的QQ号是181811669
-    var obj2 = createPerson('zdQQQ', '13398769160');
-    obj2.showName();//我的名字叫zdQQQ
-    obj2.showQQ();//我的QQ号是13398769160
+    var obj = createPerson('C', '181811669');
+    //    obj.showName();//我的名字叫C
+    //    obj.showQQ();//我的QQ号是181811669
+    var obj2 = createPerson('C', '181811669');
+    //    obj2.showName();//我的名字叫D
+    //    obj2.showQQ();//我的QQ号是13398769160
 
-    console.log('我的名字叫' + this.name);//undefined
-    console.log(obj.showName);
+    //    console.log(obj.showName);
+    //    console.log(obj2.showName);
+    //
+    //
+    //    console.log(obj.showName == obj2.showName);//false
+//    console.log(obj.showName());
+//    console.log(obj2.showName());
+//    console.log(obj.showName() == obj2.showName());//true
+
+
+    //    console.log(obj.showName);
     //    function () {
     //        console.log('我的名字叫' + this.name);
     //    }
-    console.log(obj.showName());//    我的名字叫zdNexus
-    console.log(obj.showName === obj.showName());//false
-    console.log(obj.showName === obj2.showName);//false 新建内容相同的对象和方法，浪费系统资源
+    //    console.log(obj.showName == obj2.showName);//false
+    //    console.log(obj.showQQ == obj2.showQQ);//false
+    //    console.log(obj.showName === obj2.showName);//false 新建内容相同的对象和方法，浪费系统资源
 </script>
 </html>
