--- a/demo-深入理解JavaScript/2.面向对象入门/5.构造函数-3.html
+++ b/demo-深入理解JavaScript/2.面向对象入门/5.构造函数-3.html
@@ -8,19 +8,13 @@
 
 </body>
 <script>
-    function show() {
-        console.log(this);//window
-    }
-
-    show();//window
-    new show();//object 说明this为新建立的object
+    //    function show() {
+    //        alert(this);
+    //    }
+    //    show();//window
+    //    new show();//object 说明this为新建立的object
 
     function createPerson(name, qq) {
-        //        加工
-        //        系统自动建立,this就是new,:
-        //        var this = new Object();
-
-        //        加工
         this.name = name;
         this.qq = qq;
         this.showName = function () {
@@ -29,19 +23,14 @@
         this.showQQ = function () {
             console.log('我的QQ号是' + this.qq);
         };
-
-        //        出厂
-        //        系统自动返回
-        //        return this;//return非常重要
     }
-
-    var obj = new createPerson('zdNexus', '181811669');
-    obj.showName();//我的名字叫zdNexus
-    obj.showQQ();//我的QQ号是181811669
-    var obj2 = new createPerson('zdQQQ', '13398769160');
-    obj2.showName();//我的名字叫zdQQQ
-    obj2.showQQ();//我的QQ号是13398769160
-
-    console.log(obj.showName === obj2.showName);//false 不断新建内容相同的对象和方法，浪费系统资源
+    //
+        var obj = new createPerson('zdNexus', '181811669');
+        obj.showName();//我的名字叫zdNexus
+        obj.showQQ();//我的QQ号是181811669
+        var obj2 = new createPerson('zdQQQ', '13398769160');
+        obj2.showName();//我的名字叫zdQQQ
+        obj2.showQQ();//我的QQ号是13398769160
+        console.log(obj.showName == obj2.showName);//false 不断新建内容相同的对象和方法，浪费系统资源
 </script>
 </html>
