--- a/JavaScript标准库/Expressions/index.html
+++ b/JavaScript标准库/Expressions/index.html
@@ -7,5 +7,6 @@
 <body>
 
 </body>
-<script src="instanceof.js"></script>
+<!--<script src="instanceof.js"></script>-->
+<script src="if.js"></script>
 </html>
