--- a/JavaScript标准库/Number/index.html
+++ b/JavaScript标准库/Number/index.html
@@ -7,5 +7,6 @@
 <body>
 
 </body>
-<script src="Infinity.js"></script>
+<!--<script src="Math.pow.js"></script>-->
+<script src="number.js"></script>
 </html>
