--- a/JavaScript标准库/Function/index.html
+++ b/JavaScript标准库/Function/index.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 
+<button onclick="testPromise()">Promise</button>
+<p id="log"></p>
+
 </body>
 <!--<script src="parseInt.js"></script>-->
 <!--<script src="arguments.js"></script>-->
-<script src="arguments.callee.js"></script>
+<!--<script src="arguments.callee.js"></script>-->
 </html>
