--- a/test.html
+++ b/test.html
@@ -30,4 +30,19 @@
 </div>
 
 </body>
+<script>
+    var a = 1;
+    function f1() {
+        console.log(a);
+    }
+
+    function f2() {
+        var a = 2;
+        f1();
+    }
+
+    f2();
+
+
+</script>
 </html>
