--- a/JavaScript高阶层编程/1.BOM/1.window.html
+++ b/JavaScript高阶层编程/1.BOM/1.window.html
@@ -84,5 +84,8 @@
     if (blocked) {
         console.log('The popup was blocked!');
     }
+    else{
+        console.log('The popup was no blocked!');
+    }
 </script>
 </html>
