--- a/js/index.html
+++ b/js/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        #div1 {
+            width: 300px;
+            height: 300px;
+            background-color: salmon;
+        }
+    </style>
 </head>
 <body>
 
@@ -11,11 +18,19 @@
 <p>C</p>
 <p class="b f">D</p>
 
+<div id="div1"></div>
+<div class="div2"></div>
+<div class="div2"></div>
+
 </body>
 <script src="jquery-11.1.3.js"></script>
 <script>
-    $('#first').siblings(0).remove().parent().append('<span>Last</span>');
-//$('.b !.f').remove().end().after('<span>Last</span>');
-//    $('.b').not('.f').remove().end().after('<span>Last</span>');
+    console.log($('#div1'))
+    console.log($('.div2'))
+    //    $('#first').siblings(0).remove().parent().append('<span>Last</span>');
+    //$('.b !.f').remove().end().after('<span>Last</span>');
+    //    $('.b').not('.f').remove().end().after('<span>Last</span>');
+//    console.log(document.getElementById('div1'))
+//    console.log($('#div1') == document.getElementById('div1'))
 </script>
 </html>
