--- a/CSS标准库/appearance.html
+++ b/CSS标准库/appearance.html
@@ -6,21 +6,19 @@
     <style>
         /*appearance 属性允许您使元素看上去像标准的用户界面元素。*/
         div {
-            appearance: button;
-            -moz-appearance: button; /* Firefox */
             -webkit-appearance: button; /* Safari and Chrome */
         }
 
         select {
-            appearance: button;
-            -moz-appearance: button; /* Firefox */
             -webkit-appearance: button; /* Safari and Chrome */
         }
     </style>
 </head>
 <body>
 
-<p><b>注释：</b>Internet Explorer 和 Opera 不支持 appearance 属性。</p>
+<p>
+    <b>注释：</b>Internet Explorer 和 Opera 不支持 appearance 属性。
+</p>
 
 <div>一些文本。</div>
 
