--- a/JavaScript-MDN/Element/index.html
+++ b/JavaScript-MDN/Element/index.html
@@ -7,7 +7,14 @@
         #div1 {
             width: 300px;
             height: 300px;
+            margin: 10px;
             background-color: #0000ee;
+        }
+
+        #div2{
+            width: 200px;
+            height: 200px;
+            background-color: #0D0D0D;
         }
     </style>
 </head>
@@ -16,7 +23,12 @@
 <div id="div1"></div>
 <p id="p1" class="log"></p>
 <p class="log"></p>
+<script src="element.insertAdjacentHTML.js"></script>
+
+<!--<div id="div1">-->
+    <!--<div id="div2"></div>-->
+<!--</div>-->
+<!--<script src="element.cloneNode.js"></script>-->
 
 </body>
-<script src="element.insertAdjacentHTML.js"></script>
 </html>
