--- a/坑/面试/test.html
+++ b/坑/面试/test.html
@@ -15,8 +15,16 @@
 
 <div id="div1"></div>
 
+<p class="a"></p>
+<p class="a"></p>
+<p class="a"></p>
+<p class="a"></p>
+<p class="a"></p>
+
+<div class="a"></div>
+
 </body>
 <script>
-
+    ca
 </script>
 </html>
