--- a/坑/JavaScript/JS载入顺序/index.html
+++ b/坑/JavaScript/JS载入顺序/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <script src="second.js"></script>
     <script src="first.js"></script>
+    <!--<script src="second.js"></script>-->
 </head>
 <body>
 
