--- a/JavaScript-MDN/Array/index.html
+++ b/JavaScript-MDN/Array/index.html
@@ -6,30 +6,8 @@
 </head>
 <body>
 
-<input type="text" name="zd" value="1">
-<input type="text" name="zd" value="2">
-<input type="text" name="zd" value="3">
-
 </body>
-<script>
-    //    console.log(null == undefined);
-    //    console.log(undefined == 0)
-
-    //    let arr = [1, 2, 3];
-    //    arr[10] = 10;
-    //    console.log(arr);
-    //    console.log(0 in arr);
-    //    console.log(3 in arr);
-    //    console.log(10 in arr);
-
-    var a = [];
-    var b = [];
-    console.log(a == b);
-    a = [1, 2, 3];
-    b = [1, 2, 3];
-    console.log(a == b);
-    console.log({} == {});
-</script>
+<!--<script src="test.js"></script>-->
 <script src="Array.prototype.map().js"></script>
 <!--<script src="Array.prototype.reduce().js"></script>-->
 <!--<script src="Array.prototype.filter().js"></script>-->
