--- a/坑/面试/test.html
+++ b/坑/面试/test.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        #div1{
-            width: 300px;
-            height: 300px;
+        #div1 {
+            width: 500px;
+            height: 500px;
             background-color: #daff9d;
+            transform: translate(300px,300px);
+        }
+
+        #div2 {
+            width: 100px;
+            height: 100px;
+            margin-top: 100px;
+            margin-right: -100px;
+            margin-bottom: -100px;
+            margin-left: -100px;
+            background-color: #2aabd2;
         }
     </style>
 </head>
 <body>
 
-<div id="div1"></div>
-
-<p class="a"></p>
-<p class="a"></p>
-<p class="a"></p>
-<p class="a"></p>
-<p class="a"></p>
-
-<div class="a"></div>
+<div id="div1">
+    <div id="div2"></div>
+</div>
 
 </body>
-<script>
-    ca
-</script>
 </html>
