继续学习闯关记

--- a/Reading/JavaScript闯关记/18.原型及原型链/index.html
+++ b/Reading/JavaScript闯关记/18.原型及原型链/index.html
@@ -8,5 +8,6 @@
 
 </body>
 <!--<script type="text/javascript" src="1.函数对象.js"></script>-->
-<script type="text/javascript" src="2.constructor构造函数.js"></script>
+<!--<script type="text/javascript" src="2.constructor构造函数.js"></script>-->
+<script type="text/javascript" src="3.prototype原型.js"></script>
 </html>
