--- a/坑/跨域/index.html
+++ b/坑/跨域/index.html
@@ -6,26 +6,31 @@
 </head>
 <body>
 
-<iframe id="receiveMsg" src="./data.html"></iframe>
+<!--<iframe id="receiveMsg" src="./data.html"></iframe>-->
 
-<p id="messageBox"></p>
+<!--<p id="messageBox"></p>-->
 
 </body>
-<!--<script src="jsonp.js"></script>-->
-<!--<script>-->
-    <!--ajax({-->
-        <!--url: 'https://api.douban.com/v2/movie/top250',-->
-        <!--jsonp: 'jsonpCallback',-->
-        <!--// 请求成功的回调函数-->
-        <!--success: function (res) {-->
-            <!--console.log(res);-->
-        <!--},-->
-        <!--// 请求失败的回调函数-->
-        <!--error: function (error) {-->
-        <!--}-->
-    <!--})-->
-<!--</script>-->
-<script src="document.domain.js"></script>
-<script src="window.name.js"></script>
-<script src="window.postMessage.js"></script>
+<script>
+    function demo() {
+        console.log('f1');
+    }
+</script>
+<script src="./jsonp.js"></script>
+<script>
+    ajax({
+        url: 'https://api.douban.com/v2/movie/top250',
+        jsonp: 'jsonpCallback',
+        // 请求成功的回调函数
+        success: function (res) {
+            console.log(res);
+        },
+        // 请求失败的回调函数
+        error: function (error) {
+        }
+    })
+</script>
+<!--<script src="document.domain.js"></script>-->
+<!--<script src="window.name.js"></script>-->
+<!--<script src="window.postMessage.js"></script>-->
 </html>
