--- a/demo-css88-jQuery中文手册/5-事件/3-事件绑定/trigger-1.html
+++ b/demo-css88-jQuery中文手册/5-事件/3-事件绑定/trigger-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="/zd/js/jquery-1.11.3.min.js"></script>
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <script>
         $(function () {
 //            .trigger( eventType [, extraParameters ] )
@@ -16,35 +16,35 @@
             });
             $('#foo').trigger('custom', ['Custom', 'Event']);
 
-//            Example: 若要提交第一个表单但又不想使用 submit() 函数，请尝试如下方法：
-            $("form:first").trigger("submit")
-
-//            Example: 若要提交第一个表单但又不想使用 submit() 函数，请尝试如下方法：
-            var event = jQuery.Event("submit");
-            $("form:first").trigger(event);
-            if ( event.isDefaultPrevented() ) {
-// Perform an action...
-            }
-
-//            Example: 向事件中传入任意的数据：
-            $("p").click( function (event, a, b) {
-// when a normal click fires, a and b are undefined
-// for a trigger like below a refers to "foo" and b refers to "bar"
-
-            } ).trigger("click", ["foo", "bar"]);
-
-//            Example: 通过 event 对象，向事件中传入任意的数据：span>
-            var event = jQuery.Event("logged");
-            event.user = "foo";
-            event.pass = "bar";
-            $("body").trigger(event);
-
-//            Example: 另外一种通过 event 对象传入数据的方法：
-            $("body").trigger({
-                type:"logged",
-                user:"foo",
-                pass:"bar"
-            });
+////            Example: 若要提交第一个表单但又不想使用 submit() 函数，请尝试如下方法：
+//            $("form:first").trigger("submit")
+//
+////            Example: 若要提交第一个表单但又不想使用 submit() 函数，请尝试如下方法：
+//            var event = jQuery.Event("submit");
+//            $("form:first").trigger(event);
+//            if ( event.isDefaultPrevented() ) {
+//// Perform an action...
+//            }
+//
+////            Example: 向事件中传入任意的数据：
+//            $("p").click( function (event, a, b) {
+//// when a normal click fires, a and b are undefined
+//// for a trigger like below a refers to "foo" and b refers to "bar"
+//
+//            } ).trigger("click", ["foo", "bar"]);
+//
+////            Example: 通过 event 对象，向事件中传入任意的数据：span>
+//            var event = jQuery.Event("logged");
+//            event.user = "foo";
+//            event.pass = "bar";
+//            $("body").trigger(event);
+//
+////            Example: 另外一种通过 event 对象传入数据的方法：
+//            $("body").trigger({
+//                type:"logged",
+//                user:"foo",
+//                pass:"bar"
+//            });
         });
     </script>
 </head>
