--- a/test/test.html
+++ b/test/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="font-family: 10px;">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
