--- a/test.html
+++ b/test.html
@@ -44,9 +44,16 @@
         }, 0);
     }
 
+    setInterval(function () {
+        $('.exchange')[0].click();
+        setTimeout(function () {
+            $('.pay_beans')[0].click();
+        })
+    }, 100);
+
     setTimeout(function () {
-        console.log(7);
-    }, 0);
+
+    },)
 
     console.log(8);
 
@@ -54,5 +61,18 @@
     f2();
 
     // 1 8 3 5 2 7 4 6
+
+
+    var timeStart = Date.now();
+    var timeEnd = Date.parse(new Date('2017-11-10 13:59:59'));
+    console.log(timeEnd - timeStart);
+    var a = $('.state-16')[0];
+    setTimeout(function () {
+        a.click();
+
+        setInterval(function () {
+            a.click();
+        }, 250);
+    }, timeEnd - timeStart);
 </script>
 </html>
